--- a/SOL.css
+++ b/SOL.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pathway+Extreme:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -7,64 +12,48 @@
 }
 
 .bgweb{
+    width: 100%;
+    background-image: linear-gradient(rgba(24, 104, 174, 0.7),rgba(24, 104, 174, 0.7)), url(SOLIMGs/topbg.jpg);
     background-size: cover;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0, 0, 0, 0.7)), url(SOLIMGs/topbg.jpg);
+    color: white;
+    background-position: center;
     padding-bottom: 5%;
-    background-attachment: fixed;
 }
 
 a{
     text-decoration: none;
-    color: black;
 }
 
-.topbar{
-    padding-left: 5%;
-    width: 100%;
-}
-
-.topbar h1{
-    padding-top: 40px;
-    font-size: 2.5vw;
-    color: white;
-}
-
-.webName{
-    padding-top: 5%;
-    padding-bottom: 5%;
-    text-align: center;
-}
-
-.webName p{
-    font-size: 1.5vw;
-    text-align: center;
-    margin-left: 10%;
-    margin-right: 10%;
-    color: whitesmoke;
-}
-
-.topbar img{
-    width: 100px;
-    cursor: pointer;
+.imageHolder img{
+    width: 7%;
     margin-top: 2%;
+    margin-left: 2%;
 }
 
-.webName h1{
-    font-size: 10vw;
-    color: white;
+.plateName h2{
+    margin-top: 1%;
+    text-align: center;
+    color: #1868AE;
+    background-color: #C6D7EB;
+    margin-left: 43%;
+    margin-right: 43%;
+    font-size: 2vw;
+    font-family: 'Pathway Extreme';
 }
 
-.noice{
-    font-size: 1.3vw;
-    color: black;
-    background-color: yellow;
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
-    margin-left: 45%;
-    margin-right: 45%;
+.intro h1{
+    text-align: center;
+    font-family: 'Pathway Extreme';
+    font-size: 9vw;
 }
 
-/* ========================================================= */
+.intro p{
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1.5vw;
+    padding-left: 10%;
+    padding-right: 10%;
+}
 
 .containerText{
     display: block;
@@ -79,7 +68,7 @@ a{
     margin-top: 1%;
     text-align: center;
     font-size: 3vw;
-    color: chocolate;
+    color: #1868AE;
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -107,7 +96,7 @@ a{
 .containerText2 h1{
     text-align: center;
     font-size: 3vw;
-    color: rgb(131, 225, 231);
+    color: #1868AE;
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -168,105 +157,351 @@ a{
 }
 
 .containerForm button:hover{
-    color: cornsilk;
-    background-color: black;
+    color: #C6D7EB;
+    background-color: #1868AE;
     cursor: pointer;
 }
 
 /* =============================================================== */
 
-.announce1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    margin-right: 15%;
-    margin-left: 15%;
-}
-
-.announcement{
-   margin-right: 80px;
-   align-items: center;
-}
+@media(max-width:500px){
+    .bgweb{
+        width: 100%;
+        background-size: cover;
+        background-position: center;
+        padding-bottom: 10%;
+    }
     
-.announcement h1{
-    font-size: 3.5vw;
-    text-align: right;
+    .imageHolder img{
+        width: 15%;
+        margin-top: 5%;
+        margin-left: 5%;
+    }
+    
+    .plateName h2{
+        margin-top: 1%;
+        text-align: center;
+        margin-left: 35%;
+        margin-right: 35%;
+        font-size: 4vw;
+    }
+    
+    .intro h1{
+        text-align: center;
+        font-size: 11vw;
+    }
+    
+    .intro p{
+        text-align: center;
+        font-size: 4vw;
+        padding-left: 4%;
+        padding-right: 4%;
+    }
+
+    #verse{
+        text-align: center;
+        font-size: 3.5vw;
+        padding-left: 4%;
+        padding-right: 4%;
+    }
+
+    /* =============================================================== */
+
+    .containerText{
+        display: block;
+        justify-content: center;
+        margin-left: 4%;
+        margin-right: 4%;
+        margin-top: 10%;
+        margin-bottom: 2%;
+    }
+    
+    .containerText h1{
+        margin-top: 1%;
+        text-align: center;
+        font-size: 7vw;
+        font-family: 'Courier New', Courier, monospace;
+    }
+    
+    .containerText p{
+        margin-top: 1%;
+        font-size: 4vw;
+        text-indent: 5%;
+        text-align: justify;
+    }
+    
+    /* =============================================================== */
+    
+    .bgcolor{
+        background-attachment: fixed;
+        margin-bottom: 5%;
+    }
+    
+    .containerText2{
+        display: block;
+        justify-content: center;
+        margin-left: 4%;
+        margin-right: 4%;
+    }
+    
+    .containerText2 h1{
+        text-align: center;
+        font-size: 7vw;
+        font-family: 'Courier New', Courier, monospace;
+    }
+    
+    .containerText2 p{
+        margin-top: 1%;
+        font-size: 4vw;
+        text-indent: 5%;
+        text-align: justify;
+    }
+    
+    .containerText2 ol{
+        margin-top: 3%;
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+    
+    .containerText2 ol li{
+        font-size: 3.6vw;
+        text-align: justify;
+    }
+    
+    #bottomText{
+        margin-top: 1%;
+        font-size: 3.5vw;
+        text-indent: 0;
+        text-align: justify;
+        font-style: italic;
+    }
+    
+    /* =============================================================== */
+    
+    .containerForm{
+        display: block;
+        justify-content: center;
+        margin-left: 4%;
+        margin-right: 4%;
+        margin-bottom: 3%;
+    }
+    
+    .containerForm p{
+        margin-top: 1%;
+        font-size: 3.7vw;
+        text-align: center;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+    
+    .containerForm button{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 1%;
+        padding-left: 3%;
+        padding-right: 3%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+        background: none;
+        font-size: 3.6vw;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        border: 1px solid;
+        transition: 0.5s;
+    }
+    
+    .containerForm button:hover{
+        color: #C6D7EB;
+        background-color: #1868AE;
+        cursor: pointer;
+    }
 }
 
-.announcement p{
-    font-size: 2vw;
-    text-align: right;
-}
-
-.announcement .btn{
-    display: flex;
-    justify-content: end;
-}
-
-.announcement button{
-    border: 2px solid #B1B2FF;
-    border-radius: 5px;
-    background: none;
-    margin: 10px 0 10px 0;
-    padding: 15px;  
-    cursor: pointer;
-    transition: transform .2s;
-}
-
-.announcement button:hover{
-    transform: scale(1.1);
-}
-
-.announceImg img{
-    width: 100%;
-    border-radius: 50%;
-}
-
-.bgbackground{
-    background-color:  #5d7288;
-}
+ /* =========================================================== */
 
 .bottomLinks{
     display: flex;
-    justify-content: center;
-    padding-left: 15%;
-    padding-right: 15%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    background-color: #2c3e50;
+    margin-top: 5%;
+    background-color: #1868AE;
     color: white;
+    border-bottom: 5px #C6D7EB  solid;
 }
-
-.demnSon{
-    margin-right: 2%;
+  
+ .firstGrid{
+    text-align: center;
+    border-right: white 1px solid;
+    padding: 2%;
+    width: 20%;
+}
+  
+.firstGrid img{
+    width: 50%;
+}
+  
+ .firstGrid h1{
+    margin-top: 5%;
     text-align: center;
 }
-
-.demnSon h1{
+  
+.firstGrid a{
+    margin-top: 7%;
+    color: white;
     font-size: 3.5vw;
+    font-family: 'Source Code Pro';
 }
-
-.demnSon a{
-    text-decoration: none;
+  
+ .firstGrid p{
+    margin-top: 10%;
+    font-size: 1vw;
+    text-align: left;
+    color: #C6D7EB;
+    font-family: 'Source Code Pro';
+}
+  
+ /* =========================================================== */
+  
+.secondGrid{
+    width: 20%;
+    display: inline-block;
+    margin-left: 3%;
+    margin-top: 4%;
+}
+  
+.secondGrid p{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+}
+  
+.botli{
+    margin-top: 40%;
+}
+  
+.botli p{
+    margin-bottom: 2%;
+}
+  
+.botli a{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+    color: #C6D7EB;
+}
+  
+.botli a:hover{
+    color: #C6D7EB;
+    transition: 0.5s;
+}
+  
+  /* =================================================== */
+  
+ .thirdGrid{
+    width: 20%;
+    display: inline-block;
+    margin-top: 4%;
+}
+  
+ .thirdGrid p{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+}
+  
+ .botli{
+    margin-top: 40%;
+}
+  
+ .botli p{
+    margin-bottom: 2%;
+}
+  
+ .botli a{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
     color: white;
 }
-
-.demnSon a:hover{
-    color: #B1B2FF;
+ .botli a:hover{
+    color: #C6D7EB;
+    transition: 0.5s;
+}
+  
+.mobileLinks{
+    display: none;
 }
 
-.demnSon h1:hover{
-    color: #B1B2FF;
-    cursor: pointer;
-}
 
-.demnSon p:hover{
-    color: #B1B2FF;
-    cursor: pointer;
-}
-
-.demnSon p{
-    font-size: 1.3vw;
+@media (max-width: 500px) {
+    .bottomLinks{
+       display: none;
+    }
+      
+    /* ================================================ */
+    
+    .mobileLinks{
+        margin: 0;
+        display: block;
+        background-color: #1868AE;
+        color: white;
+        border-bottom: 5px #C6D7EB  solid;
+        overflow-y: hidden;
+    }
+    
+    .mobileLinks .firstGrid{
+        text-align: left;
+        border-right: white 0px solid;
+        width: 80%;
+        padding: 2%;
+        padding-left: 10%;
+        padding-right: 10%;
+        border-bottom: white 1px solid;
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+      
+    .mobileLinks .firstGrid img{
+        width: 25%;
+        margin-top: 2%;
+    }
+      
+      .mobileLinks .firstGrid h1{
+        margin-top: 2%;
+        text-align: left;
+    }
+      
+    .mobileLinks .firstGrid a{
+        margin-top: 1%;
+        font-size: 7vw;
+        color: white;
+        font-family: 'Source Code Pro';
+    }
+      
+    .mobileLinks .firstGrid p{
+        font-size: 3vw;
+        color: #C6D7EB;
+        font-family: 'Source Code Pro';
+        margin-top: 10%;
+    }
+    
+    .mobileLinks .secondLane{
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+        width: 100%;
+        color: white;
+        margin-top: 5%;
+    }
+      
+    .mobileLinks .noice{
+        margin-bottom: 5%;
+        font-family: 'Source Code Pro';
+        font-size: 4vw;
+        color: white;
+    }
+    
+    .mobileLinks .links{
+        margin-top: 5%;
+        font-size: 4vw;
+        
+    }
+    
+    .mobileLinks .links a{
+        color: #C6D7EB;
+        font-family: 'Source Code Pro';
+    }
 }
