--- a/Wildfire.css
+++ b/Wildfire.css
@@ -75,7 +75,7 @@ a{
     transition: all 0.3s ease;
 }
 .menu-list li a:hover{
-    color: #00FFFF;
+    color: yellow;
     z-index: 2;
 }
   
@@ -1030,5 +1030,193 @@ a{
       opacity: 1;
       right: 0;
     }
+}
+
+/* ====================================================== */
+
+  .bottomLinks{
+    display: flex;
+    margin-top: 5%;
+    background-color: black;
+    color: white;
+    border-bottom: 5px yellow solid;
   }
+  
+  .firstGrid{
+    text-align: center;
+    border-right: white 1px solid;
+    padding: 2%;
+    width: 20%;
+  }
+  
+  .firstGrid img{
+    width: 50%;
+  }
+  
+  .firstGrid h1{
+    margin-top: 5%;
+    text-align: center;
+  }
+  
+  .firstGrid a{
+    margin-top: 7%;
+    color: white;
+    font-size: 3.5vw;
+    font-family: 'Source Code Pro';
+  }
+  
+  .firstGrid p{
+    margin-top: 10%;
+    font-size: 1vw;
+    text-align: left;
+    color: yellow;
+    font-family: 'Source Code Pro';
+  }
+  
+  /* =================================================== */
+  
+  
+  .secondGrid{
+    width: 20%;
+    display: inline-block;
+    margin-left: 3%;
+    margin-top: 4%;
+  }
+  
+  .secondGrid p{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+  }
+  
+  .botli{
+    margin-top: 40%;
+  }
+  
+  .botli p{
+    margin-bottom: 2%;
+  }
+  
+  .botli a{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+    color: white;
+  }
+  
+  .botli a:hover{
+    color: white;
+    transition: 0.5s;
+  }
+  
+  /* =================================================== */
+  
+  .thirdGrid{
+    width: 20%;
+    display: inline-block;
+    margin-top: 4%;
+  }
+  
+  .thirdGrid p{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+  }
+  
+  .botli{
+    margin-top: 40%;
+  }
+  
+  .botli p{
+    margin-bottom: 2%;
+  }
+  
+  .botli a{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+    color: grey;
+  }
+  
+  .botli a:hover{
+    color: yellow;
+    transition: 0.5s;
+  }
+  
+  .mobileLinks{
+    display: none;
+  }
+  
+  @media (max-width: 500px) {
+    .bottomLinks{
+      display: none;
+    }
+    
+    /* ================================================ */
+  
+    .mobileLinks{
+      display: block;
+      margin-top: 5%;
+      background-color: black;
+      color: white;
+      border-bottom: 5px yellow  solid;
+    }
+  
+    .mobileLinks .firstGrid{
+      text-align: left;
+      border-right: white 0px solid;
+      padding: 2%;
+      padding-left: 10%;
+      padding-right: 10%;
+      width: 100%;
+      border-bottom: white 1px solid;
+      padding-top: 10%;
+      padding-bottom: 10%;
+    }
+    
+    .mobileLinks .firstGrid img{
+      width: 30%;
+      margin-top: 2%;
+    }
+    
+    .mobileLinks .firstGrid h1{
+      margin-top: 2%;
+      text-align: left;
+    }
+    
+    .mobileLinks .firstGrid a{
+      margin-top: 1%;
+      font-size: 7vw;
+      color: white;
+      font-family: 'Source Code Pro';
+    }
+    
+    .mobileLinks .firstGrid p{
+      font-size: 3vw;
+      color: yellow;
+      font-family: 'Source Code Pro';
+    }
+  
+    .secondLane{
+      padding-left: 10%;
+      padding-right: 10%;
+      padding-bottom: 5%;
+      width: 100%;
+      color: white;
+      margin-top: 5%;
+    }
+    
+    .noice{
+      margin-bottom: 5%;
+      font-size: 4vw;
+      font-family: 'Source Code Pro';
+    }
+  
+    .links{
+      margin-top: 5%;
+      font-size: 4vw;
+    }
+  
+    .links a{
+      font-family: 'Source Code Pro';
+      color: yellow;
+    }
+  
+}
 
