--- a/j12.css
+++ b/j12.css
@@ -196,8 +196,6 @@ a{
 .teachers{
     margin-top: 5%;
     display: block;
-    background-color: #FF69B4;
-    color: white;
     padding-top: 5%;
     padding-bottom: 5%;
 }
@@ -676,8 +674,6 @@ a{
 
     .teachers2{
         display: block;
-        background-color: #FF69B4;
-        color: #00FFFF;
         padding-top: 10%;
         padding-bottom: 10%;
     }
@@ -1063,5 +1059,530 @@ a{
       color: cyan;
     }
 
+}
+
+#blogs{
+  background-color: #FF69B4;
+  color: white;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  margin-top: 5%;
+}
+
+.desc h1{
+  margin-left: 10%;
+  font-family: 'Andika';
+  font-size: 4vw;
+  margin-top: 3%;
+  margin-bottom: 1%;
+}
+
+.desc p{
+  margin-left: 10%;
+  margin-right: 10%;
+  font-family: 'Andika';
+  font-size: 1.4vw;
+  margin-bottom: 2%;
+}
+
+.blogs{
+  display: flex;
+  margin-left: 10%;
+  margin-right: 10%;
+  justify-content: center;
+}
+
+.column{
+  width: 80%;
+}
+
+.column h1{
+  margin-bottom: 1%;
+  font-family: 'Andika';
+  font-size: 1.4vw;
+}
+
+.column .blog{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(J12KidsIMGs/kidsandjesus.jpg);
+  background-size: cover;
+  border-radius: 10px;
+  margin-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  transition: transform .2s;
+}
+
+.column .blog .blogInfo{
+  color: white;
+  text-align: left;
+  padding-top: 32%;
+  padding-bottom: 7%;
+  text-indent: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
+  border-radius: 10px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.column .blog .blogInfo:hover{
+  border: 1px solid cyan;
+}
+
+.column .blog:hover{
+  transform: scale(1.1);
+}
+
+.column .blog  .blogInfo h1{
+  font-family: 'Russo One';
+  font-size: 3vw;
+}
+
+.column .blog  .blogInfo p{
+  font-size: 1.4vw;
+}
+
+.column2{
+  width: 50%;
+}
+
+.column2 h1{
+  margin-bottom: 2%;
+  font-family: 'Andika';
+  font-size: 1.4vw;
+}
+
+.column2 .blog{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(J12KidsIMGs/davidandgoliath.jpg);
+  background-size: cover;
+  border-radius: 10px;
+  margin-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  transition: transform .2s;
+  margin-bottom: 5%;
+}
+
+.column2 .blog .blogInfo{
+  color: white;
+  text-align: left;
+  padding-top: 32%;
+  padding-bottom: 7%;
+  text-indent: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
+  border-radius: 10px;
+  transition: 0.5s;
+  cursor: pointer;
+  
+}
+
+.column2 .blog .blogInfo:hover{
+  border: 1px solid cyan;
+}
+
+
+.column2 .blog  .blogInfo h1{
+  font-family: 'Andika';
+  font-size: 1.7vw;
+}
+
+.column2 .blog  .blogInfo p{
+  font-size: 1vw;
+  font-family: 'Andika';
+}
+
+.column2 .blog2{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(J12KidsIMGs/danielandtheLion.jpg);
+  background-size: cover;
+  border-radius: 10px;
+  margin-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  transition: transform .2s;
+  margin-bottom: 5%;
+}
+
+.column2 .blog2 .blogInfo{
+  color: white;
+  text-align: left;
+  padding-top: 32%;
+  padding-bottom: 7%;
+  text-indent: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
+  border-radius: 10px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.column2 .blog2 .blogInfo:hover{
+  border: 1px solid cyan;
+}
+
+.column2 .blog2 .blogInfo h1{
+  font-family: 'Andika';
+  font-size: 2vw;
+}
+
+.column2 .blog2  .blogInfo p{
+  font-size: 1vw;
+  font-family: 'Andika';
+}
+
+.column2 .blog3{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(J12KidsIMGs/creation.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  margin-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  transition: transform .2s;
+  margin-bottom: 5%;
+}
+
+.column2 .blog3 .blogInfo{
+  color: white;
+  text-align: left;
+  padding-top: 32%;
+  padding-bottom: 7%;
+  text-indent: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
+  border-radius: 10px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.column2 .blog3 .blogInfo:hover{
+  border: 1px solid cyan;
+}
+
+.column2 .blog3 .blogInfo h1{
+  font-family: 'Andika';
+  font-size: 1.7vw;
+}
+
+.column2 .blog3  .blogInfo p{
+  font-size: 1vw;
+  font-family: 'Andika';
+}
+
+.column2 .blog4{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(J12KidsIMGs/jesusfeeds5000.jpeg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  margin-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  transition: transform .2s;
+  margin-bottom: 5%;
+}
+
+.column2 .blog4 .blogInfo{
+  color: white;
+  text-align: left;
+  padding-top: 32%;
+  padding-bottom: 7%;
+  text-indent: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
+  border-radius: 10px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.column2 .blog4 .blogInfo:hover{
+  border: 1px solid cyan;
+}
+
+.column2 .blog4 .blogInfo h1{
+  font-family: 'Andika';
+  font-size: 1.7vw;
+}
+
+.column2 .blog4  .blogInfo p{
+  font-size: 1vw;
+  font-family: 'Andika';
+}
+
+
+.column2 .scroll{
+  max-height: 500px;
+  overflow-y: scroll;
+}
+
+@media (max-width: 500px){
+  #blogs{
+    padding-top: 10%;
+    padding-bottom: 10%;
+    margin-top: 5%;
+  }
+
+  .desc h1{
+    margin-left: 0%;
+    font-family: 'Russo One';
+    font-size: 8vw;
+    margin-top: 3%;
+    margin-bottom: 2%;
+    text-align: center;
+  }
+
+  .desc p{
+    margin-left: 5%;
+    margin-right: 5%;
+    font-family: 'Andika';
+    font-size: 3vw;
+    margin-bottom: 2%;
+    text-align: center;
+  }
+
+  .blogs{
+    display: block;
+    margin-left: 5%;
+    margin-right: 5%;
+    justify-content: center;
+  }
+
+  .column{
+    display: block;
+    width: 100%;
+    margin: auto;
+    justify-content: center;
+  }
+
+  .column h1{
+    font-family: 'Russo One';
+    font-size: 3vw;
+  }
+  .column2 h1{
+    margin-bottom: 2%;
+    font-family: 'Russo One';
+    font-size: 3vw;
+  }
+
+  .column .blog{
+    background-size: cover;
+    border-radius: 10px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display: block;
+    margin: auto;
+    transition: transform .2s;
+    margin-bottom: 5%;
+  }
+
+  .column .blog .blogInfo{
+    color: white;
+    text-align: left;
+    padding-top: 20%;
+    padding-bottom: 7%;
+    text-indent: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+  }
+
+  .column .blog .blogInfo:hover{
+    border: 1px solid cyan;
+  }
+
+  .column .blog:hover{
+    transform: scale(1.1);
+  }
+
+  .column .blog  .blogInfo h1{
+    font-family: 'Russo One';
+    font-size: 5vw;
+  }
+
+  .column .blog  .blogInfo p{
+    font-size: 2.7vw;
+  }
+
+  .column2{
+    width: 100%;
+  }
+
+  .column2 .scroll{
+    max-height: none;
+    overflow-y: hidden;
+  }
+
+  .column2 .blog{
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    margin-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display: block;
+    margin: auto;
+    transition: transform .2s;
+    margin-bottom: 5%;
+  }
+
+  .column2 .blog .blogInfo{
+    color: white;
+    text-align: left;
+    padding-top: 10%;
+    padding-bottom: 7%;
+    text-indent: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+  }
+
+  .column2 .blog .blogInfo:hover{
+    border: 1px solid cyan;
+  }
+
+  .column2 .blog:hover{
+    transform: scale(1.1);
+  }
+
+  .column2 .blog  .blogInfo h1{
+    font-family: 'Russo One';
+    font-size: 5vw;
+  }
+
+  .column2 .blog  .blogInfo p{
+    font-size: 2.7vw;
+  }
+
+  .column2 .blog2{
+  
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    margin-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display: block;
+    margin: auto;
+    transition: transform .2s;
+    margin-bottom: 5%;
+  }
+
+  .column2 .blog2 .blogInfo{
+    color: white;
+    text-align: left;
+    padding-top: 10%;
+    padding-bottom: 7%;
+    text-indent: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+  }
+
+  .column2 .blog2 .blogInfo:hover{
+    border: 1px solid cyan;
+  }
+
+  .column2 .blog2:hover{
+    transform: scale(1.1);
+  }
+
+  .column2 .blog2 .blogInfo h1{
+    font-family: 'Russo One';
+    font-size: 5vw;
+  }
+
+  .column2 .blog2  .blogInfo p{
+    font-size: 2.7vw;
+  }
+
+  .column2 .blog3{
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    transition: transform .2s;
+    margin-bottom: 5%;
+    display: block;
+    margin: auto;
+  }
+
+  .column2 .blog3 .blogInfo{
+    color: white;
+    text-align: left;
+    padding-top: 10%;
+    padding-bottom: 7%;
+    text-indent: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+  }
+
+  .column2 .blog3 .blogInfo:hover{
+    border: 1px solid cyan;
+  }
+
+  .column2 .blog3:hover{
+    transform: scale(1.1);
+  }
+
+  .column2 .blog3 .blogInfo h1{
+    font-family: 'Russo One';
+    font-size: 5vw;
+  }
+
+  .column2 .blog3  .blogInfo p{
+    font-size: 2.7vw;
+  }
+
+  .column2 .blog4{
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    transition: transform .2s;
+    margin-bottom: 5%;
+    display: block;
+    margin: auto;
+    margin-top: 5%;
+  }
+
+  .column2 .blog4 .blogInfo{
+    color: white;
+    text-align: left;
+    padding-top: 10%;
+    padding-bottom: 7%;
+    text-indent: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+  }
+
+  .column2 .blog4 .blogInfo:hover{
+    border: 1px solid cyan;
+  }
+
+  .column2 .blog4:hover{
+    transform: scale(1.1);
+  }
+
+  .column2 .blog4 .blogInfo h1{
+    font-family: 'Russo One';
+    font-size: 5vw;
+  }
+
+  .column2 .blog3  .blogInfo p{
+    font-size: 2.7vw;
+  }
 }
 
