--- a/j12.css
+++ b/j12.css
@@ -150,7 +150,6 @@ a{
     height: 100%;
     margin: 0.5%;
     border: 4px #FF69B4 solid;
-    cursor: pointer;
     transition-delay: 400ms;
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
     transition: box-shadow 0.3s ease-in-out;
@@ -909,7 +908,7 @@ a{
     margin-top: 10%;
     font-size: 1vw;
     text-align: left;
-    color: white;
+    color: cyan;
     font-family: 'Source Code Pro';
   }
   
