--- a/Index.css
+++ b/Index.css
@@ -10,6 +10,7 @@
   font-family: 'Poppins', sans-serif;
   font-family: 'Roboto Condensed', sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* custom scroll bar */
@@ -137,33 +138,87 @@
   }
 }
 
-
-
-
-/* Slideshow container */
-.slide{
-  box-sizing: border-box;
-}
-.slideshow-container {
-  max-width: 100%;
-  position: relative;
-  margin: none;
-  padding: none;
-}
-
-/* Hide the images by default */
 .mySlides {
   display: none;
 }
 
+.mySlides img{
+  width: 100%;
+  margin-bottom: 10%;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+  margin: auto;
+  overflow-y: hidden;
+}
+/* The dots/bullets/indicators */
+.dot {
+
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1s;
+  animation-name: fade;
+  animation-duration: 1s;
+}
+
+@-webkit-keyframes fade {
+  from {
+      opacity: .7
+  }
+
+  to {
+      opacity: 1
+  }
+}
+
+@keyframes fade {
+  from {
+      opacity: .7
+  }
+
+  to {
+      opacity: 1
+  }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+
+  .prev,
+  .next,
+  .text {
+      font-size: 11px
+  }
+}
+
 /* Next & previous buttons */
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
   width: auto;
-  margin-top: -22px;
   padding: 16px;
+  margin-top: -22px;
   color: white;
   font-weight: bold;
   font-size: 18px;
@@ -179,56 +234,16 @@
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  background-color: #717171;
-  position: absolute;
-  bottom: 5%;
-  font-size: 4vw;
-  width: 100%;
-  text-align: center;
-}
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
+/* ================================================ */
 
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 1.5vh;
-  width: 0.7vw;
-  margin: 0 2px;
-  background-color: #662020;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
 
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
+/* ==================================================================== */
 
 .container{
   margin-left: 15%;
