--- a/story6.css
+++ b/story6.css
@@ -193,7 +193,7 @@ a{
     margin-top: 10%;
     font-size: 1vw;
     text-align: left;
-    color: white;
+    color: cyan;
     font-family: 'Source Code Pro';
   }
   
