--- a/Blog1.css
+++ b/Blog1.css
@@ -18,15 +18,15 @@ a{
 
 .banner{
     background-color: #2c5f2d;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
     color: #ffe77a;
+    padding-top: 7%;
 }
 
 .banner h1{
     text-align: center;
-    font-size: 9vw;
+    font-size: 6vw;
     font-family: 'Source Code Pro';
-    
 }
 
 .banner p{
@@ -73,14 +73,14 @@ a{
     border-radius: 10px;
 }
 
-.content{
+.content1{
     margin-top: 45%;
     margin-left: 15%;
     margin-right: 15%;
     margin-bottom: 5%;
 }
 
-.content p{
+.content1 p{
     margin-top: 2%;
     font-size: 1.8vw;
     text-align: justify;
@@ -92,14 +92,14 @@ span{
 
 @media (max-width: 500px) {
     .banner{
+      padding-top: 20%;
         padding-bottom: 20%;
     }
     
     .banner h1{
         text-align: center;
-        font-size: 12vw;
+        font-size: 10vw;
         font-family: 'Source Code Pro';
-        
     }
     
     
@@ -123,14 +123,14 @@ span{
         border-radius: 10px;
     }
     
-    .content{
+    .content1{
         margin-left: 5%;
         margin-right: 5%;
         margin-bottom: 15%;
         margin-top: 40%;
     }
     
-    .content p{
+    .content1 p{
         margin-top: 5%;
         font-size: 5vw;
         text-align: justify;
