--- a/Mentoring.css
+++ b/Mentoring.css
@@ -7,7 +7,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Pathway Extreme';
+    font-family: 'Roboto Condensed';
     scroll-behavior: smooth;
 }
 
@@ -17,6 +17,7 @@
     background-size: cover;
     color: white;
     background-position: center;
+    padding-top: 10%;
     padding-bottom: 5%;
 }
 
@@ -31,7 +32,6 @@ a{
 }
 
 .plateName h2{
-    margin-top: 1%;
     text-align: center;
     color: #191825;
     background-color: #FFA3FD;
@@ -181,6 +181,7 @@ a{
         background-size: cover;
         background-position: center;
         padding-bottom: 10%;
+        padding-top: 20%;
     }
     
     .imageHolder img{
