--- a/Mlblog.css
+++ b/Mlblog.css
@@ -15,10 +15,15 @@
     scroll-behavior: smooth;
 }
 
+a{
+    text-decoration: none;
+}
+
 .banner{
     background-color: #cc313d;
-    padding-bottom: 10%;
+   padding-bottom: 8%;
     color: #f7c5cc;
+    padding-top: 8%;
 }
 
 .banner h1{
@@ -54,14 +59,14 @@
     border-radius: 10px;
 }
 
-.content{
+.content1{
     margin-top: 50%;
     margin-left: 15%;
     margin-right: 15%;
     margin-bottom: 5%;
 }
 
-.content p{
+.content1 p{
     margin-top: 2%;
     font-size: 1.8vw;
     text-align: justify;
@@ -73,6 +78,7 @@ span{
 
 @media (max-width: 500px) {
     .banner{
+        padding-top: 20%;
         padding-bottom: 20%;
     }
     
@@ -105,14 +111,14 @@ span{
         border-radius: 10px;
     }
     
-    .content{
+    .content1{
         margin-left: 5%;
         margin-right: 5%;
         margin-bottom: 15%;
         margin-top: 50%;
     }
     
-    .content p{
+    .content1 p{
         margin-top: 5%;
         font-size: 5vw;
         text-align: justify;
@@ -122,4 +128,189 @@ span{
         font-weight: bold;
     }
 
+}
+
+.bottomLinks{
+    display: flex;
+    margin-top: 5%;
+    background-color: #cc313d;
+    color: white;
+    border-bottom: 5px #f7c5cc solid;
+  }
+  
+  .firstGrid{
+    text-align: center;
+    border-right: white 1px solid;
+    padding: 2%;
+    width: 20%;
+  }
+  
+  .firstGrid img{
+    width: 50%;
+  }
+  
+  .firstGrid h1{
+    margin-top: 5%;
+    text-align: center;
+  }
+  
+  .firstGrid a{
+    margin-top: 7%;
+    color: white;
+    font-size: 3.5vw;
+    font-family: 'Source Code Pro';
+  }
+  
+  .firstGrid p{
+    margin-top: 10%;
+    font-size: 1vw;
+    text-align: left;
+    color: #f7c5cc;
+    font-family: 'Source Code Pro';
+  }
+  
+  /* =================================================== */
+  
+  
+  .secondGrid{
+    width: 20%;
+    display: inline-block;
+    margin-left: 3%;
+    margin-top: 4%;
+  }
+  
+  .secondGrid p{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+  }
+  
+  .botli{
+    margin-top: 40%;
+  }
+  
+  .botli p{
+    margin-bottom: 2%;
+  }
+  
+  .botli a{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+    color: white;
+  }
+  
+  .botli a:hover{
+    color: white;
+    transition: 0.5s;
+  }
+  
+  /* =================================================== */
+  
+  .thirdGrid{
+    width: 20%;
+    display: inline-block;
+    margin-top: 4%;
+  }
+  
+  .thirdGrid p{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+  }
+  
+  .botli{
+    margin-top: 40%;
+  }
+  
+  .botli p{
+    margin-bottom: 2%;
+  }
+  
+  .botli a{
+    font-family: 'Source Code Pro';
+    font-size: 1.2vw;
+    color: white;
+  }
+  
+  .botli a:hover{
+    color: #f7c5cc;
+    transition: 0.5s;
+  }
+  
+  .mobileLinks{
+    display: none;
+  }
+  
+  @media (max-width: 500px) {
+    .bottomLinks{
+      display: none;
+    }
+    
+    /* ================================================ */
+  
+    .mobileLinks{
+      display: block;
+      margin-top: 5%;
+      background-color: #cc313d;
+      color: white;
+      border-bottom: 5px #f7c5cc  solid;
+    }
+  
+    .mobileLinks .firstGrid{
+      text-align: left;
+      border-right: white 0px solid;
+      padding: 2%;
+      padding-left: 10%;
+      padding-right: 10%;
+      width: 100%;
+      border-bottom: white 1px solid;
+      padding-top: 10%;
+      padding-bottom: 10%;
+    }
+    
+    .mobileLinks .firstGrid img{
+      width: 30%;
+      margin-top: 2%;
+    }
+    
+    .mobileLinks .firstGrid h1{
+      margin-top: 2%;
+      text-align: left;
+    }
+    
+    .mobileLinks .firstGrid a{
+      margin-top: 1%;
+      font-size: 7vw;
+      color: white;
+      font-family: 'Source Code Pro';
+    }
+    
+    .mobileLinks .firstGrid p{
+      font-size: 3vw;
+      color: #f7c5cc;
+      font-family: 'Source Code Pro';
+    }
+  
+    .secondLane{
+      padding-left: 10%;
+      padding-right: 10%;
+      padding-bottom: 5%;
+      width: 100%;
+      color: white;
+      margin-top: 5%;
+    }
+    
+    .noice{
+      margin-bottom: 5%;
+      font-size: 4vw;
+      font-family: 'Source Code Pro';
+    }
+  
+    .links{
+      margin-top: 5%;
+      font-size: 4vw;
+    }
+  
+    .links a{
+      font-family: 'Source Code Pro';
+      color: #f7c5cc;
+    }
 }
