--- a/story3.css
+++ b/story3.css
@@ -20,10 +20,11 @@ a{
 
 .banner{
     width: 100%;
-    background-image: linear-gradient(rgba(255,105,180, 0.9),rgba(255,105,180, 0.9)), url(J12KidsIMGs/liondaniel.jpg);
+    background-image: linear-gradient(rgba(255,105,180, 0.9),rgba(255,105,180, 0.9)), url(J12KidsIMGs/danielandtheLion.jpg);
     background-size: cover;
     color: white;
     padding-bottom: 5%;
+    padding-top: 5%;
 }
 
 .banner h1{
@@ -91,6 +92,7 @@ a{
         background-size: cover;
         color: white;
         padding-bottom: 5%;
+        padding-top: 20%;
     }
     
     .banner h1{
@@ -192,7 +194,7 @@ a{
     margin-top: 10%;
     font-size: 1vw;
     text-align: left;
-    color: white;
+    color: cyan;
     font-family: 'Source Code Pro';
   }
   
