--- a/AnnounceTrial.css
+++ b/AnnounceTrial.css
@@ -17,3 +17,74 @@
     background-position: center;
     background-size: cover;
 }
+
+.news1{
+    display: block;
+    margin: auto;
+    width: 70%;
+    margin-bottom: 5%;
+}
+
+.news1 img{
+    display: block;
+    width: 100%;
+    margin-top: -15%;
+    transition: 0.5s;
+}
+
+.news1 img:hover{
+    box-shadow: 1px 7px 26px 0px rgba(0,0,0,0.54);
+    -webkit-box-shadow: 1px 7px 26px 0px rgba(0,0,0,0.54);
+    -moz-box-shadow: 1px 7px 26px 0px rgba(0,0,0,0.54);
+}
+
+#plateName{
+    margin-top: 2%;
+    font-size: 0.7vw;
+    color: white;
+    width: 9%;
+    padding: 0.5%;
+    background-color: #2F3C7E;
+    font-family: 'Source Code Pro';
+}
+
+.textBox{
+    margin: auto;
+    width: 98%;
+}
+
+.textBox h1{
+    margin-top: 1%;
+    margin-bottom: 1%;
+    font-size: 2vw;
+    font-family: 'Source Code Pro';
+}
+
+.textBox p{
+    color: #585757;
+    text-align: justify;
+    font-size: 1.3vw;
+    font-family: 'Roboto Condensed';
+}
+
+
+@media (max-width: 500px){
+
+    .announce{
+        width: 100%;
+        padding-top: 20%;
+        padding-bottom: 20%;
+        background-position: center;
+        background-size: cover;
+    }
+
+    .news1{
+        margin-top: -20%;
+    }
+    
+    .news1 img{
+        display: block;
+        margin: auto;
+        width: 85%;
+    }
+}
